reactored code based on best practices

--- a/share-music/app/index.html
+++ b/share-music/app/index.html
@@ -83,9 +83,15 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/share.js"></script>
-        <script src="scripts/services/VideoData.js"></script>
+        <script src="scripts/services/videos.js"></script>
+        <script src="scripts/services/filters.js"></script>
+        <script src="scripts/directives/filter-results.js"></script>
+        <script src="scripts/controllers/filter.js"></script>
+        <script src="scripts/controllers/form.js"></script>
+        <script src="scripts/directives/share-form.js"></script>
+        <script src="scripts/services/genres.js"></script>
+        <script src="scripts/controllers/content.js"></script>
+        <script src="scripts/directives/content-stream.js"></script>
         <!-- endbuild -->
 </body>
 </html>
